--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,20 +1,107 @@
-.imagen{
-    width: 8rem;
-    height: 6rem;
-    margin-top:2rem;
-}
-.titulo{
-    margin-top:3rem;
-}
-.fondo{
-    background-color:rgb(247, 199, 213);
-    height: 33rem;
+@import url('https://fonts.googleapis.com/css?family=Numans');
+html,body{
+    background-image: url("/assets/img/fondo.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
+    font-family: 'Numans', sans-serif;
+    }
+    
+    .container-fluid{
+    height: 100%;
+    align-content: center;
+    }
+    
+    .card{
+    height: 370px;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 400px;
+    background-color: rgba(0,0,0,0.5) !important;
+    }
+    
+    .social_icon span{
+    font-size: 60px;
+    margin-left: 10px;
+    color: rgb(151, 240, 116);
+    }
+    
+    .social_icon span:hover{
+    color: white;
+    cursor: pointer;
+    }
+    
+    .card-header h3{
+    color: white;
+    }
+    
+    .social_icon {
+    position: absolute;
+    right: 20px;
+    top: -45px;
+    }
+    
+    
+    .input-group-prepend span{
+    width: 50px;
+    background-color:  rgb(151, 240, 116);
+    color: black;
+    border:0 !important;
+    }
+    
+    input:focus{
+    outline: 0 0 0 0  !important;
+    box-shadow: 0 0 0 0 !important;
+    
+    }
+    
+    .remember{
+    color: white;
+    }
+    
+    .remember input
+    {
+    width: 20px;
+    height: 20px;
+    margin-left: 15px;
+    margin-right: 5px;
+    }
+    
+    .login_btn{
+    color: black;
+    background-color: rgb(151, 240, 116);
+    width: 100px;
+    }
+    
+    .login_btn:hover{
+    color: black;
+    background-color: white;
+    }
+    
+    .pie{
+    color: white;
+    }
+    
+    .card2{
+    height: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
     width: 90%;
-}
-.row{
-    margin-bottom: 2rem;
-   
-}
-.boton{
-    margin-right:1rem;
-}
+    background-color: rgba(0, 0, 0, 0.644) !important;
+    }
+    .icono{
+        color:black;
+    }
+    .card-header p{
+        color:white;
+        align-content: center;
+        
+    }
+    .botones{
+        text-align: center;
+    }
+    .boton{
+    color: black;
+    background-color: rgb(151, 240, 116);
+    }
