--- a/src/app/UsuariosOperaciones/altausuario/altausuario.component.html
+++ b/src/app/UsuariosOperaciones/altausuario/altausuario.component.html
@@ -1,15 +1,22 @@
 <h5 class="text-center titulo">Alta usuario</h5>
-        <form class="form-group col-4 offset-4" (submit)="getAlta(u.password)" > 
+        <form class="form-group col-4 offset-4" (submit)="getAlta()" #formu="ngForm" > 
             <label class="titulo" for="username">Username:</label>
-            <input class="form-control" type="text" autocomplete="off" name="username" id="username" required [(ngModel)]="u.username">
-            <label class="titulo" for="password">Password:</label>
-            <input class="form-control" type="text" autocomplete="off" name="password" id="password" required [(ngModel)]="u.password" > 
+            <input class="form-control" type="text" autocomplete="off" name="username" maxlength="6" id="username" required
+            pattern="^[a-z ]*$" [(ngModel)]="u.username" #obl="ngModel">
+            <div class="alert alert-danger" *ngIf="obl.invalid && (obl.dirty || obl.touched)"> 
+                <div *ngIf="obl.errors.required">El username es obligatorio</div>
+                <div [hidden]="!obl.errors?.pattern">
+                    Debe contener máximo 6 caracteres en minúscula
+                </div>
+              </div>
+            <!--<label class="titulo" for="password">Password:</label>
+            <input class="form-control" type="text" autocomplete="off" name="password" id="password" required [(ngModel)]="u.password" > -->
             <label class="titulo" for="nombre">Nombre:</label>
             <input class="form-control" type="text" autocomplete="off" name="nombre" id="nombre" required [(ngModel)]="u.nombre">
             <label class="titulo" for="apellido">Apellido:</label>
             <input class="form-control" type="text" autocomplete="off" name="apellido" id="apellido" required [(ngModel)]="u.apellido">
             <label class="titulo" for="telefono">Teléfono:</label>
             <input class="form-control" type="number" autocomplete="off" name="telefono" id="telefono" required [(ngModel)]="u.telefono">
-            <button type="submit" class="mt-3 boton btn float-right" >Alta</button>
+            <button type="submit" class="mt-3 boton btn float-right" [disabled]="!formu.form.valid">Alta</button>
         </form>
         
