--- a/src/app/MascotasOperaciones/listadotipo/listadotipo.component.css
+++ b/src/app/MascotasOperaciones/listadotipo/listadotipo.component.css
@@ -11,3 +11,12 @@
     color: #343a40;
     margin-left: 35%;
 }
+.negativo{
+    background-color: rgb(175, 69, 69);
+    color:white;
+    margin-top:5rem;
+    align-content: center;
+}
+.table{
+    text-align:center;
+}
