--- a/src/app/UsuariosOperaciones/altausuario/altausuario.component.html
+++ b/src/app/UsuariosOperaciones/altausuario/altausuario.component.html
@@ -16,7 +16,8 @@
             <label class="titulo" for="apellido">Apellido:</label>
             <input class="form-control" type="text" autocomplete="off" name="apellido" id="apellido" required [(ngModel)]="u.apellido">
             <label class="titulo" for="telefono">Teléfono:</label>
-            <input class="form-control" type="number" autocomplete="off" name="telefono" id="telefono" required [(ngModel)]="u.telefono">
+            <input class="form-control" type="text" autocomplete="off" name="telefono" minlength="9" maxlength="9" id="telefono" required [(ngModel)]="u.telefono" >
+
             <button type="submit" class="mt-3 boton btn float-right" [disabled]="!formu.form.valid">Alta</button>
         </form>
         
