--- a/src/app/UsuariosOperaciones/modificarusuario/modificarusuario.component.html
+++ b/src/app/UsuariosOperaciones/modificarusuario/modificarusuario.component.html
@@ -1,5 +1,5 @@
 <h5 class="text-center titulo">Modificar usuario</h5>
-        <form class="form-group col-4 offset-4" (submit)="Actualizar(u)" > 
+        <form class="form-group col-4 offset-4" (submit)="Actualizar(u)" #formu="ngForm"> 
             <label class="titulo" for="username">Username:</label>
             <input class="form-control" type="text" autocomplete="off" name="username" id="username" required [(ngModel)]="u.username">
             <label class="titulo" for="nombre">Nombre:</label>
@@ -7,7 +7,7 @@
             <label class="titulo" for="apellido">Apellido:</label>
             <input class="form-control" type="text" autocomplete="off" name="apellido" id="apellido" required [(ngModel)]="u.apellido">
             <label class="titulo" for="telefono">Teléfono:</label>
-            <input class="form-control" type="number" autocomplete="off" name="telefono" id="telefono" required [(ngModel)]="u.telefono">
-            <button type="submit" class="mt-3 boton btn float-right" >Alta</button>
+            <input class="form-control" type="text" autocomplete="off" name="telefono" id="telefono" required minlength="9" maxlength="9" [(ngModel)]="u.telefono">
+            <button type="submit" class="mt-3 boton btn float-right" [disabled]="!formu.form.valid">Modificar</button>
         </form>
         
