--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -78,11 +78,11 @@
     }
     
     .card2{
-        height: auto!important;
+    height: 100% !important;
     width: 90%;
     background-color: rgba(0, 0, 0, 0.644) !important;
     align-content: center;
-    overflow: scroll;
+    /*overflow: scroll;*/
     }
 
     
