--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <!--PARA EL PRIMER LOGIN-->
-<div *ngIf="num==-1" class="container-fluid">
+<div *ngIf="num=='-1'" class="container-fluid">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header">
@@ -48,27 +48,41 @@
 
 <!--SI ENTRA EL ADMIN <div class="d-flex justify-content-center h-100"> <div *ngIf="num==0" class="container-fluid">-->
 
-	
-	<div *ngIf="num==0" class="card2 container-fluid">
-		<div class="card-header">
-        	<h3 class="text-center">BIENVENIDO ADMINISTRADOR</h3>
-        	<p class="text-center">¿Qué desea gestionar?</p>
-			<div class="form-group botones">
-			<button class="btn float ml-3 boton" (click)="abrirListadousuario()">Usuarios <i class="fas fa-users icono" ></i></button>
-			<button class="btn float ml-3 boton" (click)="abrirListadomascota()">Mascotas <i class="fas fa-paw icono"></i></button>
-			<button class="btn float ml-3 boton" (click)="cerrarApp()">Cerrar app <i class="fas fa-times-circle"></i></button>
-        	</div>
-		</div>
+	<div *ngIf="num!='-1'">
+		<div  class="card2 container-fluid">
+			<div *ngIf="num=='0'" class="card-header">
+        		<h3 class="text-center">BIENVENIDO ADMINISTRADOR</h3>
+        		<p class="text-center">¿Qué desea gestionar?</p>
+				<div class="form-group botones">
+					<button class="btn float ml-3 boton" (click)="abrirListadousuario()">Usuarios <i class="fas fa-users icono" ></i></button>
+					<button class="btn float ml-3 boton" (click)="abrirListadomascota()">Mascotas <i class="fas fa-paw icono"></i></button>
+					<button class="btn float ml-3 boton" (click)="cerrarApp()">Cerrar app <i class="fas fa-times-circle"></i></button>
+        		</div>
+			</div>
+			<div *ngIf="num=='1'" class="card-header enserio">
+				<h3 class="text-center">BIENVENIDO {{username}}</h3>
+				<p class="text-center">¿Qué desea hacer?</p>
+				<div class="form-group botones">
+					<button class="btn float  boton" (click)="listadoVenta()">Listado para la venta <i class="fas fa-paw icono"></i></button>
+					<button class="btn float ml-3 boton"(click)="getTipo()" >Filtrar por tipo <i class="fas fa-search"></i></button>
+					<button class="btn float ml-3 boton" (click)="listadoHistorico()">Histórico de ventas <i class="fas fa-list"></i></button>
+					<button class="btn float ml-3 boton" (click)="cerrarApp()" >Cerrar app <i class="fas fa-times-circle"></i></button>
+				</div>
+			</div>
+				
+			
+		
 			<div class="card-body">
         
           
       		<router-outlet></router-outlet>	
 			</div>
 	</div>
-	
+	</div>
 
-<!--SI ENTRA UN USUARIO-->
-<div *ngIf="num==1" class="container-fluid">
+
+<!--SI ENTRA UN USUARIO
+<div *ngIf="num=='1'" class="container-fluid">
 	
 	<div class="todo d-flex justify-content-center h-100">
 		<div class="card2">
@@ -85,14 +99,14 @@
 			<div class="card-body lamierda">
         
 			
-     		 <router-outlet></router-outlet>	
+     		
 			
 		</div>
 	</div>
 	</div>
 </div>
 
-
+-->
 
 
 
